<resources>
    <string name="app_name">Techela</string>

    <string name="menu_events">Events</string>


    <string name="register">QR Scanner</string>
    <string name="techela">Techela</string>
    <string name="gallery">Gallery</string>
    <string name="share">Share</string>
    <string name="tickets">Tickets available at SR Desk!</string>
    <string name="oc_members">OC Members</string>
    <string name="quiz">Quiz</string>

    <string name="action_sign_in_short">Register</string>
    <string name="username">Display Name</string>
    <string name="minimum_password">Password too short, enter minimum 6 characters!</string>
    <string name="auth_failed">Authentication failed, check your email and password or sign up</string>
    <string name="hint_email">Email</string>
    <string name="hint_password">Password</string>
    <string name="btn_login">LOGIN</string>
    <string name="btn_link_to_register">Not a member? Register now!</string>
    <string name="btn_link_to_login">Already registered. Log me in!</string>
    <string name="btn_forgot_password">Forgot your password?</string>
    <string name="btn_reset_password">Reset Password</string>
    <string name="btn_back"><![CDATA[<< Back]]></string>
    <string name="lbl_forgot_password">Forgot password?</string>
    <string name="forgot_password_msg">We just need your registered Email Id to sent you password reset instructions.</string>
    <string name="quiz_end_message">Thank you for attempting the Quiz</string>
    <string name="communicate">Communicate</string>
    <string name="copyright_symbiosis">Copyright Symbiosis</string>
    <string name="event_name">Event Name</string>
    <string name="time">Time:</string>
    <string name="venue">Venue:</string>
    <string name="desc">Description here new line another line one more line</string>
    <string name="scan_qr_code">Scan QR Code</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="submit">Submit</string>
    <string name="start">Start</string>
    <string name="back_to_app">Back to app?</string>
    <string name="all_clues">All Clues</string>
</resources>
