<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/events"
            android:icon="@drawable/ic_events"
            android:title="@string/menu_events" />
        <item
            android:id="@+id/nav_gallery"
            android:icon="@drawable/ic_menu_gallery"
            android:title="Gallery" />
        <item
            android:id="@+id/qr_code"
            android:icon="@drawable/ic_register"
            android:title="@string/register" />

        <item
            android:id="@+id/gallery"
            android:icon="@drawable/ic_gallery"
            android:title="@string/gallery" />

        <item
            android:id="@+id/quiz"
            android:icon="@drawable/ic_gallery"
            android:title="@string/quiz" />
    </group>

    <item android:title="Communicate">
        <menu>
            <item
                android:id="@+id/share"
                android:icon="@drawable/ic_share"
                android:title="@string/share" />
        </menu>
    </item>

</menu>
