<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    app:startDestination="@+id/events">

    <fragment
        android:id="@+id/events"
        android:name="com.sitfest.techela.ui.home.HomeFragment"
        android:label="@string/menu_events"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/qr_code"
        android:name="com.sitfest.techela.ui.GoogleForm.GoogleFormFragment"
        android:label="@string/register"
        tools:layout="@layout/google_form" />

    <fragment
        android:id="@+id/gallery"
        android:name="com.sitfest.techela.ui.Gallery.GalleryFragment"
        android:label="@string/gallery"
        tools:layout="@layout/fragment_gallery" />

    <fragment
        android:id="@+id/share"
        android:name="com.sitfest.techela.Share"
        android:label="@string/share" />

    <fragment
        android:id="@+id/quiz"
        android:name="com.sitfest.techela.ui.Quiz.QuizFragment"
        android:label="@string/quiz" />

    <fragment
        android:id="@+id/register"
        android:name="com.sitfest.techela.ui.Registration.RegistrationFragment"
        android:label="Register" />


</navigation>